# modorganizer-tool_configurator

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  SConscript  configurator_en.ts  pyCfg.py  pyCfgDialog.py  pyCfgDialog.ui  pyCfgResource.qrc  pyniEdit.pro  settings.json
