CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJ_NAME tool_configurator LANGUAGES NONE)

PROJECT(${PROJ_NAME})

SET(DEPENDENCIES_DIR CACHE PATH "")

FILE(GLOB_RECURSE PYTHON_ROOT ${DEPENDENCIES_DIR}/Python*/python.vcxproj)
#FILE(GLOB_RECURSE PYTHON_ROOT ${DEPENDENCIES_DIR}/pyconfig.h.in)
GET_FILENAME_COMPONENT(PYTHON_ROOT ${PYTHON_ROOT} DIRECTORY)

MESSAGE(${PYTHON_ROOT})

ADD_SUBDIRECTORY(src)